syntax = "proto3";

package chat_server_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/patrikeyeva/microservices_course_chat_server_1.0/pkg/chat_server_v1;chat_server_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message SendMessageRequest {
  Message message = 1;
}